<resources>
    <string name="app_name">BookManager</string>

    <string name="title_activity_dang_nhap">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_user">User</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nhà Sách Kim Đồng</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="gioithi">Giới Thiệu</string>
    <string name="theloai">Thể Loại</string>
    <string name="qls">Quản Lý Sách </string>
    <string name="qlhd">Quản Lý Hoá Đơn </string>
    <string name="thongk">Thông Kê </string>

    <string name="menu_tools">Tools</string>
    <string name="menu_share">Đăng Xuất</string>
    <string name="menu_send">Đăng Xuất</string>
</resources>
