<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/gioithieu"
            android:icon="@drawable/gioithieu"
            android:title="@string/gioithi" />
        <item
            android:id="@+id/theloai"
            android:icon="@drawable/theloai"
            android:title="@string/theloai" />
        <item
            android:id="@+id/qls"
            android:icon="@drawable/quanly1"
            android:title="@string/qls" />
        <item
            android:id="@+id/slhd"
            android:icon="@drawable/quanly1"
            android:title="@string/qlhd" />
        <item
            android:id="@+id/thongke"
            android:icon="@drawable/thongke"
            android:title="@string/thongk" />
    </group>

    <item android:title="Communicate">
        <menu>

            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
